--- a/.github/workflows/run-installation-test.yml
+++ b/.github/workflows/run-installation-test.yml
@@ -5,6 +5,7 @@ on:
 
 jobs:
   docker-bootstrap:
+    name: Build bootstrap image
     runs-on: ubuntu-latest
     steps:
       - name: Checkout repository
